--- a/resources/config.json
+++ b/resources/config.json
@@ -2,12 +2,12 @@
     "enableConsole": true,
     "enableLogger": false,
     "dumpStaticEntries": false,
-    "maxFps": 0,
+    "maxFps": 144,
     "unlockSize": true,
     "uiScale": 1.0,
     "replaceFont": true,
-    "autoFullscreen": true,
-    "dicts": [
+    "autoFullscreen": false,
+    "dicts": [ 
         "localized_data/static.json",
         "localized_data/common.json",
         "localized_data/chara.json",
